# antigravity-trading-system

./: .gitignore  SETUP.md  SYSTEM_REVIEW_IMPROVEMENTS.md  VIX_SCANNING_ANALYSIS.md  alpaca_api.py  copilot_cheatsheet.md  copilot_session_history.md  copilot_todo.md  dashboard.py  deepseek_analyst.py  dual_dashboard.py  dual_tastytrade_api.py  enhanced_paper_trading.py  find_typo.py  hybrid_market_data.py  jax_engine.py  main.backup.20251117_104558.py  main.py  main_enhanced_paper.backup.20251117_104558.py  market_utils.py  multi_broker_api.py  opportunity_scanner.py  paper_positions.json  patch_account_selection.py  patch_countdown_timer.py  patch_fix_account_detection.py  patch_multi_account_selection.py  patch_vix_ultra_conservative.py  pyproject.toml  requirements.txt  risk_monitor.py  show_positions.py  tastytrade_api.py  test_account.py  test_after_hours.py  test_all_balances.py  test_alpaca.py  test_composer.py  test_critical_fixes.py  test_deepseek_fixes.py  (+12 more)
.github/: copilot-instructions.md
backup_20251118_135115/: .env.example  COMPOSER_INTEGRATION_COMPLETE.md  COMPOSER_QUICKSTART.md  STATUS.md  analyze_positions_detailed.py  composer_mcp_bridge.py  create_backup.py  dashboard.backup.20251117_104558.py  debug_risk.py  deepseek_analyst.backup.20251117_104558.py  deepseek_analyst.py  dual_tastytrade_api.py  fix_main_files.py  jax_engine.py  options_dashboard.py  overview.txt  paper_positions.json  paper_trading.py  required_info.py  requirements_web.txt  secure_approach.py  tastytrade_api.py  tastytrade_market_data.py  test_dashboard_fix.py  test_fast_scan.py  (+5 more)
(+44 files in other folders)
